--- a/五班网站代码.html
+++ b/五班网站代码.html
@@ -33,7 +33,7 @@
                 background: rgba(0, 0, 0, 0.4); 
                 z-index: -1; 
             }
-        .1class{
+        .class1{
             width:400px;
             background-color:rgba(0,0,0,0.2);
             margin: 10px auto;
@@ -51,7 +51,7 @@
             测试版本不代表最终品质，意见及反馈请联系制作者。
         </marquee>
     <img src="/huashang5/location.jpg"/>
-    <div class="1class">
+    <div class="class1">
         <h1>title</h1>
         <p>test</p>
     </div>
