--- a/index.html
+++ b/index.html
@@ -294,7 +294,8 @@
             </div>
         </div>
         
-        <div class="location.jpg">
+        <div class="">
+        <div class="https://github.com/GTX-xr/gtx-xr.github.io/blob/main/location.jpg">
             位置图片
         </div>
         
