--- a/index.html
+++ b/index.html
@@ -348,6 +348,12 @@
                 <h3>刘红云</h3>
                 <p>English Superman</p>
             </div>
+             <div class="member">
+                <div class="pulse"></div>
+                <h3>孙旺吾</h3>
+                <p>生物MVP</p>
+            </div>
+            
             
             </div>
             <div class="member">
