--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
         </div>
         
         <div class="location-img">
-            <img src="https://github.com/GTX-xr/gtx-xr.github.io/blob/main/location.jpg">
+            <img src="https://raw.githubusercontent.com/GTX-xr/gtx-xr.github.io/main/location.jpg">
         </div>
         
         <h2>领军人物</h2>
